# django-waffle

./: .gitignore  CHANGES  pyproject.toml  setup.py  test_settings.py  tox.ini  travis.txt
docs/about/: roadmap.rst
docs/starting/: configuring.rst
test_app/: models.py  urls.py
waffle/: __init__.py  admin.py  decorators.py  models.py  testutils.py  utils.py  views.py
waffle/migrations/: 0002_delete_flag_model.py  0004_delete_flag.py
waffle/tests/: test_admin.py  test_decorators.py  test_testutils.py  test_views.py  test_waffle.py
